# kefir_ajuste

./: Makefile  config.yaml  pyproject.toml  requirements.txt
docs/source/: conf.py
notebooks/: practica_resolve.ipynb
source/: log_eq.py  solve_eq.py
src/: log_eq.py
tests/: test_log_eq.py  test_solve_eq.py
